- Fixed incorrect z-index on person profile pages.

--- a/RockWeb/Themes/Rock/Styles/_newprofile.less
+++ b/RockWeb/Themes/Rock/Styles/_newprofile.less
@@ -287,6 +287,7 @@
   }
 
   > .card-section {
+    z-index: 1010;
     padding: 16px;
 
     ~ .card-section {
