--- a/RockWeb/Themes/Rock/Styles/newprofilenew.css
+++ b/RockWeb/Themes/Rock/Styles/newprofilenew.css
@@ -259,7 +259,7 @@
   top: 0;
   right: 0;
   left: 0;
-  z-index: 1040;
+  z-index: 1010;
   display: flex;
   justify-content: space-between;
   padding: 6px;
